# model-initialization-ULwinds

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
site/: app.js  index.html  styles.css
site/data/: latest.json
src/ulwinds/: __init__.py  cli.py  config.py  demo.py  models.py  observations.py  verification.py
tests/: test_config.py  test_observations.py  test_verification.py
